fix button on mobile

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -147,6 +147,8 @@ body
         opacity: 1
         z-index: 10
         background: #fff
+        #footer
+            margin-bottom: 20px
     #window-settings[opened]
         transform: translateX(0)
         opacity: 0.9
